feat: adjusting the publisher listing for pagination
